* merge from main repository.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+2003-09-25  Topia  <topia@clovery.jp>
+
+	* このバージョン以前の Tiarra には、
+	モジュールのアンロードをすると原因不明のエラーが起こるバグがあります。
+	また、アップグレードの際には再起動が必要です。
+
 2003-08-12  phonohawk  <phonohawk@lycos.co.uk>
 
 	* シングルサーバーモードを実装。
