--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,41 @@
+2003-09-25  Topia  <topia@clovery.jp>
+
+	* tiarra:
+	--version と --debug の実装。
+	::debug_printmsg(...), ::debug_mode を使用できます。
+	::printmsg への autoflash 指定を追加。
+
+	* main/ModuleManager.pm:
+	(update_modules): $this->{modules} の再構成を、アンロード前に移動。
+	notification_of_message_io の呼び出しでエラーが発生するのを回避。
+	(_load): デバッグモード時に UNIVERSAL::isa が嘘を付いた場合、
+	標準出力に出力する。
+	(_unload):
+	no strict の場所を変更。
+	シンボルテーブル内に存在する関数のうち、
+	自分自身が定義した訳ではない関数は undef しないようにした。
+	デバッグモードなら、 undef したスカラ・配列・シンボルテーブル・関数、
+	undef しなかった関数、に付いてそれぞれ標準出力に出力する。
+
+	* module/Channel/Join/Connect.pm:
+	コンマの直後にあるスペースは削除するようにした。
+	TiarraDoc を追加。
+
+	* module/Tools/FileCache.pm:
+	destruct メソッドを実装。
+	RCSタグを標準のものにした。
+
+	* module/Tools/GroupDB.pm:
+	Module::Use が抜けていたので追加。
+	RCSタグを標準のものにした。
+
+	* sample.conf:
+	Channel::Join::Connect の ブロックを TiarraDoc から再生成。
+	指定項目の変化はありません。
+
 2003-09-24  phonohawk  <phonohawk@lycos.co.uk>
 
-	* main/Multicast.pm (nick_p): 
+	* main/Multicast.pm (nick_p):
 	「|」を含むnickをnickと認識していなかったので修正。
 
 	* module/Log/Recent.pm:
@@ -69,7 +104,7 @@
 
 	* main/Hook.pm:
 	フックの一般的な定義。このファイルはクラスHookとクラスHookTargetを定義する。
-	
+
 	* main/Configuration.pm:
 	リロードした時、フック`reloaded'を呼ぶ。
 
@@ -105,7 +140,7 @@
 	* doc-src/contents.html: 追加。htmlドキュメントのテンプレート。
 
 	* doc-src/module-group.tdoc: 追加。モジュールの分類情報。
-	
+
 	* doc-src/module-toc.html: 追加。モジュールの目次のhtmlテンプレート。
 
 	* doc-src/sample.conf.in: 追加。sample.confのテンプレート。
@@ -869,7 +904,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.102 2003/09/23 15:26:11 admin Exp $
-#   Author: $Author: admin $
-#     Date: $Date: 2003/09/23 15:26:11 $
-# Revision: $Revision: 1.102 $
+#       Id: $Id: ChangeLog,v 1.103 2003/09/25 13:15:59 topia Exp $
+#   Author: $Author: topia $
+#     Date: $Date: 2003/09/25 13:15:59 $
+# Revision: $Revision: 1.103 $
