--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2003-10-14  Topia  <topia@clovery.jp>
+
+	* single-server-mode の bugfix です。
+	single-server-mode を使う予定が無い場合は再起動は不要です。
+
 2003-09-28  phonohawk  <phonohawk@lycos.co.uk>
 
 	* tiarra-conf.el:
