--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-09  phonohawk  <phonohawk@lycos.co.uk>
+
+	* tiarra (help):
+	メッセージ中のstdinとstderrの間違いを修正。
+
 2003-11-08  Topia  <topia@clovery.jp>
 
 	* make-password: enhancement.
@@ -1021,7 +1026,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.115 2003/11/08 09:40:41 topia Exp $
-#   Author: $Author: topia $
-#     Date: $Date: 2003/11/08 09:40:41 $
-# Revision: $Revision: 1.115 $
+#       Id: $Id: ChangeLog,v 1.116 2003/11/09 07:32:12 admin Exp $
+#   Author: $Author: admin $
+#     Date: $Date: 2003/11/09 07:32:12 $
+# Revision: $Revision: 1.116 $
