--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+2003-11-09  Topia  <topia@clovery.jp>
+
+	* System::Reload
+	自分自身がリロードできないバグの修正。
+	kill -HUP pid は出来るので、これを使ってリロードしてください。
+
+	* single-server-mode の bugfix です。
+	single-server-mode を使う予定が無い場合は再起動は不要です。
+	single-server-mode を使っている方は、アップデートして再起動して下さい。
+
 2003-11-08  Topia  <topia@clovery.jp>
 
 	* single-server-mode の bugfix です。
