--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-14  phonohawk  <phonohawk@lycos.co.uk>
+
+	* main/Mask.pm:
+	マスクから作った正規表現をqrでコンパイルする際、
+	iフラグを付け忘れて大文字小文字の区別が*されていた*ので修正。
+
+	* main/IRCMessage.pm (_parse):
+	空文字列については文字コード変換処理を明示的に省略する。
+	Unicode::JapaneseにはISO-2022-JP→UTF-8変換において空文字列を"\x00"にしてしまう問題あり。
+
 2003-11-17  Topia  <topia@clovery.jp>
 
 	* tiarra: enhancement.
@@ -1058,7 +1068,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.120 2003/11/17 01:27:19 topia Exp $
-#   Author: $Author: topia $
-#     Date: $Date: 2003/11/17 01:27:19 $
-# Revision: $Revision: 1.120 $
+#       Id: $Id: ChangeLog,v 1.121 2004/01/14 14:48:35 admin Exp $
+#   Author: $Author: admin $
+#     Date: $Date: 2004/01/14 14:48:35 $
+# Revision: $Revision: 1.121 $
