--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-23  phonohawk  <phonohawk@lycos.co.uk>
+
+	* tiarra: 起動時オプション --make-password 追加。
+	make-passwordの機能をtiarra本体に移した。
+	
+	* make-password: 削除
+
 2004-01-20  phonohawk  <phonohawk@lycos.co.uk>
 
 	* main/Unicode/Japanese.pm:
@@ -1073,7 +1080,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.122 2004/01/20 01:48:13 admin Exp $
+#       Id: $Id: ChangeLog,v 1.123 2004/01/22 17:39:22 admin Exp $
 #   Author: $Author: admin $
-#     Date: $Date: 2004/01/20 01:48:13 $
-# Revision: $Revision: 1.122 $
+#     Date: $Date: 2004/01/22 17:39:22 $
+# Revision: $Revision: 1.123 $
