--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,30 @@
+2004-02-14  Topia  <topia@clovery.jp>
+
+	* Log::Recent, System::Raw, Channel::Freeze, Channel::Rejoin
+	  - これらのモジュールのうち一つでも組み込んでいる場合は、
+	    リロードする前に Tiarra を再起動させてください。
+	    新たに入った機能を使っています。
+
+	* Client::Cache
+	  - 新規追加。クライアントからの問い合わせのうち、
+	    Tiarra が情報を持っていて、
+	    サーバに問い合わせる必要がないものをキャッシュとして返します。
+	  - いまのところ MODE キャッシュと、 WHO キャッシュを実装していて、
+	    どちらも、クライアントからの最初の問い合わせのときにのみ
+	    キャッシュを使います。
+	  - LimeChat(1.18 で WHO 機能を切れるようになりましたが) や、
+	    X-Chat などのクライアントを使用されている場合は、
+	    組み込むと便利です。
+
+	* Client::Eval
+	  - 追加。クライアントからのコマンドしか受け付けませんが、
+	    その代わりすべてのコマンドを実行できます。
+	    事実上 IRC パスワードがわかれば Tiarra が動いているホスト上で
+	    動作しているアカウントの権限で何でもできる、
+	    ということに注意してください。
+	  - 意味がわからなければ組み込まないことを推奨します。
+	    必要な時だけ組み込んで、すぐはずす、というのも良いかもしれません。
+
 2004-01-27  phonohawk  <phonohawk@ps.sakura.ne.jp>
 
 	* 行の終わりにCRLFでなくLFを付けるようなクライアントでも
